kubernetes/2_ckad/katas/project_1_dummy/ingress/ingress-rules/ingress-wear-rule-def.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress-wear-
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: wear-service
            port:
              number: 80
        pathType: Prefix
status:
  loadBalancer: {}
