kubernetes/2_ckad/katas/project_1_dummy/ingress/ingress-rules/ingress-wear-watch-rule-def.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress-wear-watch
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: wear-service
            port:
              number: 80
        path: /wear
        pathType: Exact
      - backend:
          service:
            name: watch-service
            port:
              number: 80
        path: /watch
        pathType: Exact
status:
  loadBalancer: {}
